@@ -7,8 +7,6 @@ class CH(Country):
     id = "CH"
     languages = ["de"]
     default_lang = "de"
-    regions = ["AG", "AI", "AR", "BE", "BL", "BS", "FR", "GE", "GL", "GR", "JU", "LU", "NE", "NW", "OW", "SG", "SH",
-               "SO", "SZ", "TI", "TG", "UR", "VD", "VS", "ZG", "ZH"]
     easter_type = EASTER_WESTERN
 
     def __init__(self):
