@@ -8,10 +8,6 @@ class US(Country):
     id = "US"
     languages = ["en", "es"]
     default_lang = "en"
-    regions = ["AL", "AK", "AZ", "AR", "CA", "CO", "CT", "DE", "FL", "GA", "HI", "ID", "IL", "IN", "IA", "KS", "KY",
-               "LA", "ME", "MD", "MA", "MI", "MN", "MS", "MO", "MT", "NE", "NV", "NH", "NJ", "NM", "NY", "NC", "ND",
-               "OH", "OK", "OR", "PA", "RI", "SC", "SD", "TN", "TX", "UT", "VT", "VA", "WA", "WV", "WI", "WY", "DC",
-               "AS", "GU", "MP", "PR", "UM", "VI"]
     easter_type = EASTER_WESTERN
 
     def __init__(self):
