@@ -1,3 +1,4 @@
+-      Test holidays are only defined for valid regions
 -      Enable holidata to be calculated outside confirmed range
 
 2024.8.0
